fix webcam alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -231,7 +231,7 @@ h1, h2, h3, h4, h5 {
 
 .post-content {
     margin-bottom: $spacing-unit;
-    padding: 0 5%;
+    padding: 0 5px;
     text-align: center;
     h2 {
         font-size: 32px;
